Fixes for thankyou note overflow display (BT-1236)

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,9 @@
 .thank-you {
     .cla-badge {
-        margin-left: 5px;
+        margin-right: 5px;
+        display: inline-block;
+        max-width: 100%;
+        overflow: hidden;
     }
 
     .thank-you-item {
@@ -18,8 +21,29 @@
         position: relative;
         border: 1px solid #e9e9e9;
 
+        .thank-you-note__top {
+            text-align: justify;
+
+            &::after {
+                width: 100%;
+                display: inline-block;
+                content: ".";
+                visibility: hidden;
+            }
+        }
+
+        &__value {
+            max-width: 100%;
+        }
+
+        &__subject, &__value {
+            vertical-align: top;
+            display: inline-block;
+            text-align: left;
+        }
+
         hr {
-            margin: 8px 0;
+            margin: -12px 0 8px;
             border-color: #e7e7e7;
         }
 
